# NetScriptFramework

./: README.md
ApplySpellPatch/: ApplySpellPatch.sln
ApplySpellPatch/ApplySpellPatch/: ApplySpellPatch.csproj  Plugin.cs  Settings.cs  VIDS.cs
ApplySpellPatch/ApplySpellPatch/Properties/: AssemblyInfo.cs
Eggceptions/: Eggceptions.sln
Eggceptions/Eggceptions/: ArgumentFormatException.cs  ArgumentNullException.cs  ArgumentNullOrEmptyException.cs  ArgumentNullOrSparseException.cs  ArgumentNullOrWhiteSpaceException.cs  ArgumentOutOfRangeException.cs  Eggception.cs  Eggceptions.projitems  Eggceptions.shproj  FormatException.cs  NullException.cs  NullOrEmptyException.cs  NullOrSparseException.cs  NullOrWhiteSpaceException.cs  OutOfRangeException.cs
Eggceptions/Eggceptions/Bethesda/: ArgumentDetachedCellException.cs  ArgumentFormNotFoundException.cs  ArgumentFormTypeException.cs  ArgumentRunTimeTypeInformationException.cs  BethesdaException.cs  DetachedCellException.cs  FormNotFoundException.cs  FormTypeException.cs  RunTimeTypeInformationException.cs
Eggceptions/Eggceptions/Math/: MathException.cs
Eggceptions/Eggceptions/SkyrimSE/: ArgumentDetachedCellException.cs  ArgumentFormNotFoundException.cs  ArgumentFormTypeException.cs  ArgumentRunTimeTypeInformationException.cs  DetachedCellException.cs  FormNotFoundException.cs  FormTypeException.cs  RunTimeTypeInformationException.cs  SkyrimSEException.cs
Eggstensions/: Eggstensions.sln
Eggstensions.Events/: Eggstensions.Events.sln
Eggstensions.Events/Eggstensions.Events/: Eggstensions.Events.csproj  Events.cs  Offsets.cs
Eggstensions.Events/Eggstensions.Events/Properties/: AssemblyInfo.cs
Eggstensions.Interoperability/: Eggstensions.Interoperability.sln
Eggstensions.Interoperability/Eggstensions.Interoperability/: AssemblyInfo.cpp  Eggstensions.Interoperability.vcxproj  Eggstensions.Interoperability.vcxproj.filters  Events.cpp  Events.h  Memory.cpp  Memory.h  NativeObject.cpp  NativeObject.h  Offsets.cpp  Offsets.h  pch.h
Eggstensions.Interoperability/Eggstensions.Interoperability/B/: BSTEventSink.cpp  BSTEventSink.h
Eggstensions.Interoperability/Eggstensions.Interoperability/T/: TESHitEvent.cpp  TESHitEvent.h  TESHitEventSink.cpp  TESHitEventSink.h
Eggstensions.Interoperability/x64/Release/: Eggstensions.Interoperability.dll.metagen
Eggstensions/Eggstensions/: AddressLibrary.cs  Assembly.cs  Context.cs  DNNE.cs  Delegates.cs  Eggstensions.projitems  Eggstensions.shproj  Events.cs  ExtensionMethods.cs  Json.cs  Log.cs  Main.cs  Math.cs  Memory.cs  NativeObject.cs  Offsets.cs  SKSE.cs  SequentialArray.cs  SkyrimSE.cs  TemporaryObject.cs  Trampoline.cs  Union.cs  UnmanagedArray.cs  UnmanagedObject.cs  UnmanagedType.cs  VirtualObject.cs
Eggstensions/Eggstensions/A/: AIProcess.cs  AccumulatingValueModifierEffect.cs  ActiveEffect.cs  Actor.cs  ActorMagicCaster.cs  ActorProcess.cs  ActorValueOwner.cs  ArrowProjectile.cs
Eggstensions/Eggstensions/B/: BGSEntryPointFunctionData.cs  BGSEntryPointFunctionDataSpellItem.cs  BGSEntryPointPerkEntry.cs  BGSMovementType.cs  BGSPerkEntry.cs  BSAttachTechniques.cs  BSFixedString.cs  BSHandleRefObject.cs  BSPointerHandle.cs  BSTArray.cs  BSTEventSink.cs  BSTEventSource.cs  bhkWorld.cs
Eggstensions/Eggstensions/Bethesda/: AIProcess.cs  Actor.cs  BGSCollisionLayer.cs  BSDismemberSkinInstance.cs  BSExtraData.cs  BSFixedString.cs  BSGeometry.cs  BSHandleRefObject.cs  BSParticleShaderCubeEmitter.cs  BSParticleShaderEmitter.cs  BSParticleShaderProperty.cs  BSReadWriteLock.cs  BSSpinLock.cs  BSTArray.cs  BSTSet.cs  BSTSetEntry.cs  BSTSmartPointer.cs  BipedAnim.cs  BipedObject.cs  ButtonEvent.cs  Character.cs  ConsoleLog.cs  CrosshairPickData.cs  Events.cs  ExtraDataList.cs  GridArray.cs  GridCellArray.cs  Havok.cs  HorseCameraState.cs  Main.cs  Math.cs  MiddleHighProcessData.cs  NiAVObject.cs  NiBoneNames.cs  NiBound.cs  NiCamera.cs  NiFrustum.cs  NiMatrix33.cs  NiNode.cs  NiObject.cs  (+37 more)
Eggstensions/Eggstensions/C/: Color.cs
Eggstensions/Eggstensions/E/: Effect.cs  EffectSetting.cs  EnchantmentItem.cs  ExtraDataList.cs
ElapsedSecondsPatch/: ElapsedSecondsPatch.sln
ElapsedSecondsPatch/ElapsedSecondsPatch/: ElapsedSecondsPatch.csproj  Plugin.cs  Settings.cs
HorsingAround/: HorsingAround.sln
HorsingAround/HorsingAround/: HorsingAround.csproj  Plugin.cs  Settings.cs  VIDS.cs
MountedInteractions/: MountedInteractions.sln
MountedInteractions/MountedInteractions/: MountedInteractions.csproj  Plugin.cs  Settings.cs
QuickHarvest/: QuickHarvest.sln
QuickHarvest/QuickHarvest/: Plugin.cs  QuickHarvest.csproj  Settings.cs
ScrambledBugs/: .editorconfig  ScrambledBugs.json  ScrambledBugs.sln
ScrambledBugs/ScrambledBugs/: Delegates.cs  Offsets.cs  Patterns.cs  Plugin.cs  ScrambledBugs.csproj  Settings.cs
ShelterFramework/: ShelterFramework.sln
ShelterFramework/ShelterFramework/: Plugin.cs  Settings.cs  ShelterFramework.csproj
Trails/: .clang-format  CMakeLists.txt  Trails.json  vcpkg.json
Trails/cmake/: headerlist.cmake  sourcelist.cmake
Trails/src/: BGSDecalManager.cpp  BGSDecalManager.h  BGSImpactManager.cpp  BGSImpactManager.h  Events.cpp  Events.h  PCH.h  Settings.cpp  Settings.h  main.cpp
(+217 files in other folders)
